# CPP_lang_lab_3

./: CMakeLists.txt  Makefile  README.md  image_main.cpp  knn_main.cpp  simple_test.cpp  thread_pool_test.cpp
inc/: image_convolver.h  knn_searcher.h  thread_pool.h
plot/: image.py  knn.py  thread_overhead.py  thread_overhead_percent.py
report/: С++_2_лаба_Р4119_Симоновский.docx  С++_3_лаба_Р4119_Симоновский.docx
scripts/: prepare_env.sh  restore_default.sh  restore_env.sh
src/: image_convolver.cpp  knn_searcher.cpp  thread_pool.cpp
test/: Makefile  main.cpp
